[gd_scene load_steps=9 format=2]

[ext_resource path="res://menu/PanelWithHugeShadow.tres" type="StyleBox" id=1]
[ext_resource path="res://menu/MenuTheme.tres" type="Theme" id=2]
[ext_resource path="res://menu/TabsWithGamepadControl.gd" type="Script" id=3]
[ext_resource path="res://menu/sfx/PlaySoundsOnTheseButtons.tscn" type="PackedScene" id=4]
[ext_resource path="res://hud/TabHintContainer.tscn" type="PackedScene" id=5]
[ext_resource path="res://HevLib/events/EventMenu.gd" type="Script" id=6]
[ext_resource path="res://HevLib/events/EventSelector.gd" type="Script" id=7]
[ext_resource path="res://HevLib/events/Events.gd" type="Script" id=8]

[node name="EventMenu" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="NoMargins" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -200.0
margin_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 2 )

[node name="PlaySoundsOnTheseButtons" parent="NoMargins" instance=ExtResource( 4 )]

[node name="TabHintContainer" parent="NoMargins" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1080.0
margin_bottom = 700.0
size_flags_horizontal = 4

[node name="MarginContainer" parent="NoMargins/TabHintContainer" index="0"]
margin_right = 1080.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 32 )
custom_constants/margin_right = -80
custom_constants/margin_left = -80

[node name="HBoxContainer" parent="NoMargins/TabHintContainer/MarginContainer" index="0"]
modulate = Color( 1, 1, 1, 0.501961 )
margin_left = -80.0
margin_right = 1160.0
margin_bottom = 43.0
size_flags_vertical = 3

[node name="Right" parent="NoMargins/TabHintContainer/MarginContainer/HBoxContainer" index="0"]
visible = false
margin_bottom = 39.0

[node name="Label" parent="NoMargins/TabHintContainer/MarginContainer/HBoxContainer" index="1"]
margin_left = 0.0
margin_top = 0.0
margin_right = 1240.0
margin_bottom = 39.0

[node name="Left" parent="NoMargins/TabHintContainer/MarginContainer/HBoxContainer" index="2"]
visible = false
margin_left = 796.0
margin_right = 876.0
margin_bottom = 39.0

[node name="TabsWithGamepadControl" type="TabContainer" parent="NoMargins/TabHintContainer"]
show_behind_parent = true
margin_right = 1080.0
margin_bottom = 700.0
rect_min_size = Vector2( 1080, 235 )
size_flags_vertical = 3
custom_styles/panel = ExtResource( 1 )
use_hidden_tabs_for_min_size = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EVENTDRIVER_MENU" type="Tabs" parent="NoMargins/TabHintContainer/TabsWithGamepadControl"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 50.0
margin_right = -1.0
margin_bottom = -1.0
rect_min_size = Vector2( 0, 170 )
tab_align = 0

[node name="MarginContainer" type="MarginContainer" parent="NoMargins/TabHintContainer/TabsWithGamepadControl/EVENTDRIVER_MENU"]
margin_right = 1078.0
margin_bottom = 227.0
custom_constants/margin_right = 0
custom_constants/margin_top = 16
custom_constants/margin_left = 0
custom_constants/margin_bottom = 48

[node name="MarginContainer" type="MarginContainer" parent="NoMargins/TabHintContainer/TabsWithGamepadControl/EVENTDRIVER_MENU/MarginContainer"]
margin_top = 16.0
margin_right = 1078.0
margin_bottom = 816.0

[node name="VBoxContainer" type="VBoxContainer" parent="NoMargins/TabHintContainer/TabsWithGamepadControl/EVENTDRIVER_MENU/MarginContainer/MarginContainer"]
margin_right = 1078.0
margin_bottom = 800.0
rect_min_size = Vector2( 690, 800 )
custom_constants/separation = 6

[node name="Events" type="OptionButton" parent="NoMargins/TabHintContainer/TabsWithGamepadControl/EVENTDRIVER_MENU/MarginContainer/MarginContainer/VBoxContainer"]
margin_right = 1078.0
margin_bottom = 41.0
align = 2
script = ExtResource( 8 )

[node name="MenuLabel" type="Label" parent="NoMargins/TabHintContainer/TabsWithGamepadControl/EVENTDRIVER_MENU/MarginContainer/MarginContainer/VBoxContainer/Events"]
margin_left = 10.0
margin_right = 690.0
text = "EVENTDRIVER_EVENTS"
autowrap = true

[node name="Timer" type="Timer" parent="NoMargins/TabHintContainer/TabsWithGamepadControl/EVENTDRIVER_MENU/MarginContainer/MarginContainer/VBoxContainer/Events"]
wait_time = 0.1

[node name="HBoxContainer" type="HBoxContainer" parent="NoMargins/TabHintContainer/TabsWithGamepadControl/EVENTDRIVER_MENU/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 1078.0
margin_bottom = 86.0
rect_min_size = Vector2( 1078, 0 )
alignment = 2

[node name="Label" type="Label" parent="NoMargins/TabHintContainer/TabsWithGamepadControl/EVENTDRIVER_MENU/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 367.0
margin_right = 739.0
margin_bottom = 39.0
text = "EVENTDRIVER_TIMER"
align = 1
valign = 1

[node name="Timer" type="Label" parent="NoMargins/TabHintContainer/TabsWithGamepadControl/EVENTDRIVER_MENU/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 743.0
margin_right = 1078.0
margin_bottom = 39.0
rect_min_size = Vector2( 335, 0 )
text = "%s"
align = 2

[node name="HSlider" type="HSlider" parent="NoMargins/TabHintContainer/TabsWithGamepadControl/EVENTDRIVER_MENU/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 1078.0
margin_bottom = 116.0
min_value = 1.0
max_value = 1350.0
value = 1.0

[node name="SpawnNow" type="Button" parent="NoMargins/TabHintContainer/TabsWithGamepadControl/EVENTDRIVER_MENU/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 1078.0
margin_bottom = 163.0
text = "EVENTDRIVER_SPAWNNOW"

[node name="EVENTDRIVER_EVENT_SELECTOR" type="Tabs" parent="NoMargins/TabHintContainer/TabsWithGamepadControl"]
visible = false
margin_right = 40.0
margin_bottom = 49.0

[node name="MarginContainer" type="MarginContainer" parent="NoMargins/TabHintContainer/TabsWithGamepadControl/EVENTDRIVER_EVENT_SELECTOR"]
margin_right = 1078.0
margin_bottom = 870.0
custom_constants/margin_right = 0
custom_constants/margin_top = 16
custom_constants/margin_left = 0
custom_constants/margin_bottom = 48

[node name="Events" type="ScrollContainer" parent="NoMargins/TabHintContainer/TabsWithGamepadControl/EVENTDRIVER_EVENT_SELECTOR/MarginContainer"]
margin_top = 16.0
margin_right = 1078.0
margin_bottom = 822.0
follow_focus = true
script = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="NoMargins/TabHintContainer/TabsWithGamepadControl/EVENTDRIVER_EVENT_SELECTOR/MarginContainer/Events"]
margin_top = 16.0
margin_bottom = 16.0

[connection signal="item_selected" from="NoMargins/TabHintContainer/TabsWithGamepadControl/EVENTDRIVER_MENU/MarginContainer/MarginContainer/VBoxContainer/Events" to="NoMargins/TabHintContainer/TabsWithGamepadControl/EVENTDRIVER_MENU/MarginContainer/MarginContainer/VBoxContainer/Events" method="_on_Events_item_selected"]
[connection signal="timeout" from="NoMargins/TabHintContainer/TabsWithGamepadControl/EVENTDRIVER_MENU/MarginContainer/MarginContainer/VBoxContainer/Events/Timer" to="NoMargins/TabHintContainer/TabsWithGamepadControl/EVENTDRIVER_MENU/MarginContainer/MarginContainer/VBoxContainer/Events" method="_timer_complete"]
[connection signal="value_changed" from="NoMargins/TabHintContainer/TabsWithGamepadControl/EVENTDRIVER_MENU/MarginContainer/MarginContainer/VBoxContainer/HSlider" to="NoMargins/TabHintContainer/TabsWithGamepadControl/EVENTDRIVER_MENU/MarginContainer/MarginContainer/VBoxContainer/Events" method="_on_HSlider_value_changed"]
[connection signal="pressed" from="NoMargins/TabHintContainer/TabsWithGamepadControl/EVENTDRIVER_MENU/MarginContainer/MarginContainer/VBoxContainer/SpawnNow" to="NoMargins/TabHintContainer/TabsWithGamepadControl/EVENTDRIVER_MENU/MarginContainer/MarginContainer/VBoxContainer/Events" method="_on_SpawnNow_pressed"]

[editable path="NoMargins/TabHintContainer"]
